--- a/inventario/templates/relatoriopdf.html
+++ b/inventario/templates/relatoriopdf.html
@@ -1,42 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Relatório de Baixa de Estoque</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 12px;
-        }
-        h1 {
-            text-align: center;
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 10px;
-        }
-    </style>
+   
 </head>
-<body>
-    <h1>Relatório de Baixa de Estoque</h1>
+<div class="relatorio-baixa">
+    <h1 class="h1-relatorios">Relatório de Baixa de Estoque</h1>
 
     <table>
         <thead>
@@ -56,6 +27,7 @@
                     <td>{{ movimentacao.produto.nome }}</td>
                     <td>{{ movimentacao.lote }}</td>
                     <td>{{ movimentacao.quantidade }}</td>
+                    <td>{{ movimentacao.descricao.descricao }}</td>
                     <td>{{ movimentacao.validade }}</td>
                     <td>{{ movimentacao.fornecedor }}</td>
                     <td>{{ movimentacao.origem }}</td>
@@ -68,5 +40,5 @@
     <div class="footer">
         <p>Gerado em: {{ now|date:"d/m/Y H:i" }}</p>
     </div>
-</body>
+</div>
 </html>
