--- a/inventario/templates/deletar.html
+++ b/inventario/templates/deletar.html
@@ -8,4 +8,11 @@
     <button type="submit" class="btn btn-danger">Sim, excluir</button>
     <a href="{% url 'estoque' %}" class="btn btn-secondary">Cancelar</a>
 </form>
+{% if messages %}
+<div class="mt-3">
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+</div>
+{% endif %}
 {% endblock %}
