--- a/inventario/templates/editar_estoque.html
+++ b/inventario/templates/editar_estoque.html
@@ -1,11 +1,20 @@
 {% extends 'index.html' %}
 {% block content %}
-<h2>Editar Item: {{ item.produto.nome }} - Lote {{ item.lote }}</h2>
+<h3>Editar Item: {{ item.produto.nome }} - Lote {{ item.lote }}</h3>
 
 <form method="post">
+    <div class="container mt-4">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Salvar</button>
     <a href="{% url 'estoque' %}" class="btn btn-secondary">Cancelar</a>
 </form>
+{% if messages %}
+<div class="mt-3">
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+</div>
+{% endif %}
+</div>
 {% endblock %}
