--- a/inventario/templates/cadastromateriais.html
+++ b/inventario/templates/cadastromateriais.html
@@ -3,7 +3,7 @@
 
 {% block title %}Cadastro de Materiais{% endblock %}
 {% block content %}
-<h2>Cadastro</h2>
+<h3>Entrada de produtos</h3>
 
 <div class="container mt-4">
     <form method="post">
