--- a/inventario/templates/baixa.html
+++ b/inventario/templates/baixa.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="col-md-6">
-          <label for="requisitante" class="form-label">Estabelecimento Requisitante</label>
+          <label for="requisitante" class="form-label">Estabelecimento Requisitante / Setor </label>
           <input type="text" name="requisitante" id="requisitante" class="form-control" required>
         </div>
       </div>
