--- a/inventario/templates/static/CSS/style.css
+++ b/inventario/templates/static/CSS/style.css
@@ -1,23 +1,23 @@
 header {
-    display: flex;               /* Alinha imagem e texto lado a lado */
-    align-items: center;         /* Centraliza verticalmente */
-    height: 100px;               /* Altura fixa do cabeçalho */
-    background-color: #d9e2ff;   /* Cor de fundo opcional */
+    display: flex;               
+    align-items: center;         
+    height: 100px;               
+    background-color: #d9e2ff;   
     padding: 0 20px;
-    overflow: hidden;            /* Evita que a imagem extrapole */
+    overflow: hidden;            
 }
 
 /* Imagem no canto esquerdo */
 header img {
-    height: 100%;                /* Ocupa toda a altura do header */
-    width: auto;                 /* Mantém proporção */
-    max-width: 200px;            /* Limita a largura da imagem */
+    height: 100%;                
+    width: auto;                 
+    max-width: 200px;           
     object-fit: cover;
 }
 
 /* Texto do cabeçalho */
 header p {
-    margin: 0 auto;           /* Espaço entre imagem e texto */
+    margin: 0 auto;          
     font-size: 16px;
     text-align: center;
     font-family: "Rubik", sans-serif;
@@ -36,8 +36,8 @@ nav {
     border-radius: 8px;
     box-shadow: inset 5px 5px 5px 5px #9ca6bf;
     display: flex;
-    justify-content: space-between; /* Alinha os itens principais do menu */
-    padding: 10px 20px; /* Adiciona espaçamento dentro do nav */
+    justify-content: space-between; 
+    padding: 10px 20px; 
 }
 
 nav > ul {
@@ -90,17 +90,17 @@ nav li ul li a {
     white-space: nowrap;
 }
 
-/* Ajustes para a área de login */
+/* Area de login */
 nav .login-area {
     display: flex;
-    justify-content: flex-end; /* Alinha os itens à direita */
+    justify-content: flex-end; 
     align-items: center;
-    margin-left: 20px; /* Espaço à esquerda dos itens de login */
-    margin-right: 20px; /* Adiciona margem à direita para afastar um pouco do canto */
+    margin-left: 20px; 
+    margin-right: 20px; 
 }
 
 nav .login-area li {
-    margin-left: 15px; /* Diminui a distância entre os itens de login */
+    margin-left: 15px; 
 }
 
 nav .login-name {
@@ -113,7 +113,11 @@ nav .login-menu a {
     color: #000;
     font-weight: normal;
 }
-
+nav .login-name span {
+    display: inline-block;
+    min-width: 200px; 
+    text-align: right; 
+}
 /* Estilos de formatação de texto */
 h1 .h1-relatorios {
     text-align: center;
@@ -170,9 +174,9 @@ th {
 }
 
 #id_nome {
-    height: 35px;  /* Aumenta a altura */
-    font-size: 1rem;  /* Ajuste no tamanho da fonte */
-    padding: 8px 10px;  /* Deixa o texto mais confortável */
+    height: 35px;  
+    font-size: 1rem;  
+    padding: 8px 10px;  
 }
 
 /* Container */
@@ -225,6 +229,13 @@ button[type="submit"] {
     margin: 0 20px 20px;
 }
 
+#filtrar{
+    margin-top: -18px;
+}
+
+#busca{
+    margin-top:30px;
+}
 
 .color1 {color: #000000;}
 .color2 {color: #171924;}
